2006-03-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-debug.c,
	libfreeipmi/include/freeipmi/ipmi-debug.h: Remove ipmi_debug.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c,
	libfreeipmi/src/ipmi-rmcpplus-debug.c: Add SOL payload type
	support.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c,
	libfreeipmi/src/ipmi-rmcpplus-debug.c: General cleanup.

	* libfreeipmi/src/ipmi-sol-cmds.c,
	libfreeipmi/include/freeipmi/ipmi-sol-cmds.h
	(fill_sol_payload_data): New function.

	* fish/: Add temporary workaround for configuration of K_G and K_R.
	
2006-03-16  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/, fish/: Support SOL_Payload_Access configuration
	for each user in bmc-config.

	* fish/extensions/bmc-config.scm, fish/extensions/bc-section.scm,
	fish/extensions/bc-user-section.scm: Support a 5th user in
	bmc-config.

2006-03-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Minor rmcpplus code cleanup.

	* ipmipower/: Add architectural support for other IPMI 2.0 cipher
	suites.  Cipher suites other than 0 must still be tested.

	* fish/: Add initial K_R and K_G bmc-config support to bmc-config.

	* libfreeipmi/include/freeipmi/ipmi-rmcpplus-crypt.h
	(ipmi_crypt_init): Add prototype.

	* libfreeipmi/src/ipmi-rmcpplus-crypt.c (_ipmi_init_crypt): Rename
	to ipmi_crypt_init.  Un-static function.  Force user to call
	before using rmcpplus.

	* libfreeipmi/src/ipmi-rmcpplus-crypt.c,
	ipmipower/src/ipmipower.c: Adjust for API change.
	
2006-03-14  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_cipher_suite.h,
	ipmipower/src/ipmipower_cipher_suite.c: New files.

	* ipmipower/src/ipmipower.h: New cipher suite id definitions.

	* ipmipower/: Support command line, config file, and prompt
	configuration of the cipher suite id.

	* ipmipower/: Support auto detection of IPMI cipher suites.

2006-03-13  Albert Chu <chu11@llnl.gov>
	
	* libfreeipmi/src/ipmi-rmcpplus-utils.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-utils.h
	(ipmi_calculate_keys): Renamed to